# kibana-python

./: LICENSE  README.md  pyproject.toml  setup.cfg
src/kibana/: kibana.py
